--- a/New Unity Project.csproj
+++ b/New Unity Project.csproj
@@ -84,6 +84,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\AnchorKeyBoard.cs" />
     <Compile Include="Assets\GoogleVR\Legacy\Scripts\GvrHead.cs" />
     <Compile Include="Assets\GoogleVR\Legacy\Scripts\Internal\GvrCameraUtils.cs" />
     <Compile Include="Assets\GoogleVR\Legacy\Scripts\Internal\GvrEye.cs" />
